--- a/web/index.html
+++ b/web/index.html
@@ -14,8 +14,9 @@
     <!--
       Preconnect to essential domains
     -->
-    <link rel="preconnect" href="https://bsky.social">
-    <link rel="preconnect" href="https://go.bsky.app">
+    <link rel="preconnect" href="https://events.bsky.app" crossorigin="anonymous">
+    <link rel="preconnect" href="https://cdn.bsky.app" crossorigin="anonymous">
+    <link rel="preconnect" href="https://public.api.bsky.app" crossorigin="anonymous">
     <title>%WEB_TITLE%</title>
 
     <link rel="preload" as="font" type="font/woff2" href="/static/media/InterVariable.c504db5c06caaf7cdfba.woff2" crossorigin>
